# ur5_push_operations

./: HOWTO.txt  LICENSE.txt  README.md
bringup/: CMakeLists.txt  package.xml
bringup/cadb/: manifest
bringup/config/: apriltags.yaml  elbow_up-restricted.yaml  objects.yaml
bringup/launch/: apriltags2.launch  bringup.launch  bringup.rviz  demo.launch  kinect2.launch  ur5_setup_bringup.launch
bringup/meshes/collision/: pusher_1.stl
bringup/scripts/: create_dump_dirs.sh
bringup/urdf/: pusher.urdf.xacro  tams_ur5_setup.urdf.xacro
execution/: CMakeLists.txt  package.xml
execution/include/cli/: operations.h
execution/include/push_execution/: greedy_pushing.h  push_execution.h  pusher.h
execution/include/push_sampler/: exploration_sampler.h  push_sampler.h
execution/include/push_util/: util.h
execution/src/cli/: cli.cpp
execution/src/push_execution/: push_execution_server.cpp  pusher.cpp
execution/src/push_sampler/: exploration_sampler.cpp  push_sampler.cpp
object_localization/: CMakeLists.txt  package.xml
object_localization/launch/: object_localization.launch
object_localization/src/: ft_dump_service.cpp  image_dump_service.cpp  object_localization.cpp
object_recognition/: CMakeLists.txt  package.xml
object_recognition/launch/: object_recognition.launch
object_recognition/src/: image_dump_service.cpp  object_recognition.cpp
planning/: CMakeLists.txt  package.xml
planning/config/: planning.yaml
planning/include/push_planning/: chained_control_sampler.h  conversions.h  push_state_propagator.h  push_state_validity_checker.h
planning/launch/: push_planning.launch  push_planning_demo.launch
planning/scripts/: interactive_marker.py  plan_visualization.py  push_planner_visualization.py
planning/scripts/lib/: content_helper.py  marker_helper.py
planning/src/: push_planner_node.cpp
prediction/: CMakeLists.txt  README.md  package.xml
prediction/include/push_prediction/: neural_network.h  push_predictor.h
prediction/scripts/: predictive_sampler_node.py  x_model.pkl  y_model.pkl  yaw_model.pkl
prediction/scripts/lib/: load_samples.py
prediction/src/: push_predictor.cpp
push_execution/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
push_execution/action/: ExplorePushes.action
push_execution/include/cli/: operations.h
push_execution/include/push_execution/: push_execution.h  pusher.h
push_execution/include/push_sampler/: exploration_sampler.h  push_sampler.h
push_execution/include/ur5_pusher/: push_approach_sampler.h  push_execution.h  push_sampler.h  pusher.h  safety_push_sampler.h
push_execution/msg/: Push.msg
push_execution/src/: cli.cpp  push_approach_sampler.cpp  push_bringup.cpp  push_execution.cpp  push_execution_server.cpp  push_sampler.cpp  pusher.cpp  safety_push_sampler.cpp
push_execution/src/cli/: cli.cpp
push_execution/src/push_execution/: push_execution_server.cpp  pusher.cpp
push_execution/src/push_sampler/: exploration_sampler.cpp  push_sampler.cpp
push_execution/srv/: ExecutePush.srv  PerformRandomPush.srv  SteerPush.srv
push_learning/: CMakeLists.txt  package.xml
push_learning/scripts/: push_result_handler.py
push_msgs/: CMakeLists.txt  package.xml
push_msgs/action/: MoveObject.action  PlanPush.action
push_msgs/msg/: Push.msg  PushApproach.msg  PushTrajectory.msg
push_msgs/srv/: ExecutePush.srv  FTDump.srv  PredictPush.srv  SamplePredictivePush.srv
push_planning/: CMakeLists.txt  package.xml
push_planning/action/: PushPlan.action
push_planning/config/: planning.yaml
push_planning/include/push_planning/: chained_control_sampler.h  conversions.h  push_state_propagator.h  push_state_validity_checker.h
push_planning/launch/: push_planning.launch  push_planning_demo.launch  push_planning_test.launch
push_planning/scripts/: interactive_marker.py  push_planner_visualization.py
push_planning/src/: RigidBodyPlanningWithControls.cpp  push_planner_node.cpp
push_prediction/: CMakeLists.txt  package.xml
push_prediction/include/push_prediction/: neural_network.h  push_predictor.h
push_prediction/models/: keras_model.yaml  model_with_distance.yaml
push_prediction/scripts/: keras_model.h5  plot_pushes.py  prediction_node.py  predictive_sampler_node.py  push_predictor.py  simple_regression.py
push_prediction/scripts/lib/: content_helper.py  yaml_export.py
push_prediction/scripts/util/: find_duplicates.py  merge_datasets.py
push_prediction/src/: push_prediction.cpp  push_predictor.cpp
ur5_push_setup/: CMakeLists.txt  package.xml
ur5_push_setup/cadb/: arm_2018-03-16T13:12:38.647433.ompldb
ur5_push_setup/config/: apriltags.yaml  elbow_up-restricted.yaml  fake_controllers.yaml  objects.yaml  tams_ur5_setup_pusher.srdf
ur5_push_setup/launch/: apriltags2.launch  bringup.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hardware.launch  kinect2.launch  kinect2_table.launch  move_group.launch  planning_context.launch  setup_demo.launch  trajectory_execution.launch.xml  ur5_setup_bringup.launch
ur5_push_setup/meshes/: pusher_2_aligned_x-binary.stl
ur5_push_setup/meshes/collision/: pusher_1_binary.stl  pusher_2_binary.stl
ur5_push_setup/scripts/: create_dump_dirs.sh
ur5_push_setup/urdf/: arm.urdf.xacro  pusher.urdf.xacro  tams_ur5_setup.urdf.xacro
