<?xml version="1.0"?>
<package format="2">
	<name>tams_ur5_push_execution</name>
	<version>0.0.0</version>
	<description>The push_execution package</description>
	<maintainer email="1kayser@informatik.uni-hamburg.de">Lars Henning Kayser</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>moveit_core</build_depend>
	<build_depend>moveit_msgs</build_depend>
	<build_depend>moveit_ros_planning</build_depend>
	<build_depend>eigen_conversion</build_depend>
	<build_depend>tams_ur5_push_msgs</build_depend>
	<build_depend>tams_ur5_push_prediction</build_depend>
	<build_depend>moveit_ros_planning_interface</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>actionlib_msgs</exec_depend>
	<exec_depend>moveit_core</exec_depend>
	<exec_depend>moveit_msgs</exec_depend>
	<exec_depend>eigen_conversion</exec_depend>
	<exec_depend>moveit_ros_planning</exec_depend>
	<exec_depend>tams_ur5_push_msgs</exec_depend>
	<exec_depend>tams_ur5_push_prediction</exec_depend>
	<exec_depend>moveit_ros_planning_interface</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>control_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
