<?xml version="1.0"?>
<package>
  <name>object_recognition</name>
  <version>0.0.1</version>
  <description>The object_recognition package for push operations</description>

  <maintainer email="1kayser@informatik.uni-hamburg.de">Lars Henning Kayser</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltags_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>apriltags_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
