<?xml version="1.0"?>
<package>
	<name>tams_ur5_push_execution</name>
	<version>0.0.0</version>
	<description>The push_execution package</description>
	<maintainer email="1kayser@informatik.uni-hamburg.de">Lars Henning Kayser</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>moveit_core</build_depend>
	<build_depend>moveit_msgs</build_depend>
	<build_depend>moveit_ros_planning</build_depend>
	<build_depend>eigen_conversion</build_depend>
	<build_depend>moveit_ros_planning_interface</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>moveit_core</run_depend>
	<run_depend>moveit_msgs</run_depend>
	<run_depend>eigen_conversion</run_depend>
	<run_depend>moveit_ros_planning</run_depend>
	<run_depend>moveit_ros_planning_interface</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
</package>
