<?xml version="1.0"?>
<package format="2">
  <name>tams_ur5_push_msgs</name>
  <version>0.0.0</version>
  <description>The tams_ur5_push_msgs package</description>
  <maintainer email="1kayser@informatik.uni-hamburg.de">Henning Kayser</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>actionlib_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>


  <export>
e
  </export>
</package>
