<?xml version="1.0"?>
<package format="2">
  <name>push_prediction</name>
  <version>0.0.1</version>
  <description>The push_prediction package</description>

  <maintainer email="1kayser@rzssh1.informatik.uni-hamburg.de">Henning Kayser</maintainer>


  <license>BSD</license>



  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>











